<resources>
    <string name="app_name">Team Track</string>

    <!-- Strings related to login -->
    <string name="prompt_emp_code">Employee Code</string>
    <string name="prompt_mobile_no">Mobile Number</string>
    <string name="action_next">Next</string>
    <string name="action_continue">Continue</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>

    <!-- Meeting status values-->
    <string-array name="status_array">
        <item>New Appointment</item>
        <item>Meeting Completed</item>
        <item>Meeting Cancelled</item>
    </string-array>
</resources>
